# datastructures

./: .appveyor.yml  .codecov.yml  .gitignore  .mailmap  .travis.yml  CHANGES  CHANGES.md  COPYRIGHT.md  Makefile.am  Makefile.in  PackageInfo.g  README  README.md  bench-hash.g  bench-heap.g  configure  configure.ac  init.g  makedoc.g  makedocrel.g  read.g
.github/workflows/: CI.yml  manual.yml
_data/: package.yml
doc/: Intros.autodoc  chap0.html  chap0.txt  chap0_mj.html  chap1.html  chap1.txt  chap10.html  chap10.txt  chap10_mj.html  chap11.html  chap11.txt  chap11_mj.html  chap12.html  chap12.txt  chap12_mj.html  chap1_mj.html  chap2.html  chap2.txt  chap2_mj.html  chap3.html  chap3.txt  chap3_mj.html  chap4.html  chap4.txt  chap4_mj.html  chap5.html  chap5.txt  chap5_mj.html  chap6.html  chap6.txt  chap6_mj.html  chap7.html  chap7.txt  chap7_mj.html  chap8.html  chap8.txt  chap8_mj.html  chap9.html  chap9.txt  chap9_mj.html  (+25 more)
gap/: avltree.g  avltree.gd  avltree.gi  avltree2.gi  binaryheap.gd  binaryheap.gi  bst.g  bst.gi  cache.gd  cache.gi  cache2.gd  cache2.gi  dllist.gd  dllist.gi  hash.gd  hash.gi  hash_pcql.gd  hash_pcql.gi  hashfun.gd  hashfun.gi  hashfunctions.gd  hashfunctions.gi  hashmap.gd  hashmap.gi  hashset.gd  hashset.gi  heap.gd  heap.gi  lqueue.gd  lqueue.gi  memoize.gd  memoize.gi  ordered.gd  ordered.gi  pairhppq.gd  pairhppq.gi  pairingheap.gd  pairingheap.gi  plistdeque.gd  plistdeque.gi  (+13 more)
scripts/: build_gap.sh  build_pkg.sh  gather-coverage.sh  travis_build.sh
src/: avl.c  avl.h  avltree.c  avltree.h  binaryheap.c  binaryheap.h  bst.c  bst.h  datastructures.c  datastructures.h  gapdata.c  hash_pcql.c  hash_pcql.h  hashfun.c  hashfun.h  hashfunctions.c  hashfunctions.h  hashmap.c  hashmap.h  hashtable-avl.c  hashtable-avl.h  hashtable.c  hashtable.h  misc.c  misc.h  orb.c  pairingheap.c  pairingheap.h  skiplist.c  skiplist.h  uf.c  uf.h
tst/: binaryheap.tst  hash-plain.tst  hash-tree.tst  hashmap.tst  hashset.tst  heap.tst  heaptest.g  memoize.tst  ordered.g  ordered.tst  pairingheap.tst  plistdeque.tst  plistqueue.tst  queue.tst  slice.tst  stack.tst  testall.g  testall.tst  uf.tst
tst/basictests/: avl.tst  queue.tst
tst/hashfunctions/: hashtestfuncs.g  int.tst  perm.tst  permgroup.tst  pperm.tst  recursive.tst  string.tst  trans.tst
